--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
     }
     
 </style>
-<header>
-    <nav class="navbar navbar-expand-lg custom-navbar">
+<nav class="navbar navbar-expand-lg custom-navbar">
+    <div class="container-fluid">
+      <!-- Dropdown with the collapsible content and hidden navigation items -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-      <div class="container-fluid d-flex justify-content-between collapse" id="navbarSupportedContent"> <!-- Use justify-content-between -->
-        <!-- Logo on the left -->
-        <a class="navbar-brand" href="index.html">
-          <img src="photos/dota.png">
-          <p id="brand-name">Dota community</p>
-        </a>
+
+   
   
+      <!-- Navbar brand -->
+      <a class="navbar-brand" href="index.html">
+        <img src="photos/dota.png">
+        <p id="brand-name">Dota community</p>
+      </a>
+  
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- Navigation items in the middle -->
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -40,7 +46,7 @@
         </ul>
   
         <!-- Sign in and Sign out on the right -->
-        <ul class="navbar-nav mr-5">
+        <ul class="navbar-nav ml-auto"> <!-- Use ml-auto instead of mr-5 -->
           <li class="nav-item">
             <a class="navbar-link" href="index.html">Sign in</a>
           </li>
@@ -48,13 +54,13 @@
             <a class="navbar-link" href="index.html">Sign up</a>
           </li>
         </ul>
-
+     
 
       </div>
-
-
-    </nav>
-  </header>
+    </div>
+  </nav>
+  
+  
   
   
   
