--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     }
     
 </style>
+
 <nav class="navbar navbar-expand-lg custom-navbar">
-    <div class="container-fluid ">
+    <div class="container-fluid">
 
         <!-- Navbar brand -->
         <a class="navbar-brand" href="index.html">
@@ -25,13 +26,13 @@
         <!-- Dropdown with the collapsible content and hidden navigation items -->
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+                <img src="photos/more-icon.png" width="40px" height="40px" alt="Custom Icon">
         </button>
 
 
   
       <!-- Collapsible content -->
-      <div class="collapse navbar-collapse " id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- Navigation items in the middle -->
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -64,19 +65,36 @@
           </li>
         </ul>
       </div>
-
-
-
-  
   </div>
   </nav>
 
-  
-  
-  
-  
-  
-  
+
+<div class="nav-transition-bar"></div>
+
+<section class="news-section">
+  <h2 class="news-description">Recent Posts</h2>
+
+    <div class="row">
+      <div class="col-md-4 mb-4"> <!-- Add margin bottom class -->
+        <p class="article-heading">Some geek news</p>
+        <p class="article-content">Step into the World of Dota with Patch 7.25 - A Comprehensive and Thrilling Gameplay Overhaul! Explore the Major Changes, Hero Tweaks, Item Updates, and More - Unravel the Exciting New Features and Enhancements Redefining the Dota Experience!</p>
+      </div>
+      <div class="col-md-4 mb-4"> <!-- Add margin bottom class -->
+        <p class="article-heading">Some geek news</p>
+        <p class="article-content">Step into the World of Dota with Patch 7.25 - A Comprehensive and Thrilling Gameplay Overhaul! Explore the Major Changes, Hero Tweaks, Item Updates, and More - Unravel the Exciting New Features and Enhancements Redefining the Dota Experience!</p>
+      </div>
+      <div class="col-md-4 mb-4"> <!-- Add margin bottom class -->
+        <p class="article-heading">Some geek news</p>
+        <p class="article-content">Step into the World of Dota with Patch 7.25 - A Comprehensive and Thrilling Gameplay Overhaul! Explore the Major Changes, Hero Tweaks, Item Updates, and More - Unravel the Exciting New Features and Enhancements Redefining the Dota Experience!</p>
+      </div>
+      <hr class="separator-hz">
+    </div>
+  </section>
+
+
+  </div>
+
+
 
 
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
